# infinite_runner

./: Cargo.toml
assets/: fruit.blend  ground.blend
src/: main.rs
