[package]
name = "infinite_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.13.0"
bevy_flycam = "0.8.1"
bevy_mod_picking = "0.9.0"
bevy_renet = "0.0.5"
local-ip-address = "0.4.8"
public-ip = "0.2.2"
serde = "1.0.145"
tokyo = "1.0.0"
